--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>idea.verlif</groupId>
     <artifactId>SpringTaskService</artifactId>
-    <version>test-0.1</version>
+    <version>Alpha-2.6.1-1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
