--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>idea.verlif</groupId>
-    <artifactId>SpringTaskService</artifactId>
-    <version>Alpha-2.6.1-1</version>
+    <artifactId>task-spring-boot-starter</artifactId>
+    <version>2.6.6-1.1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.1</version>
+        <version>2.6.6</version>
         <relativePath/>
     </parent>
 
